<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener"/>
        <import type="android.view.View" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Scrollable view here -->
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundPrimary">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleGravity="top"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="24dp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="24dp" />

                    <TextView
                        android:id="@+id/text_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/title_initial_profit"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                        app:layout_constraintStart_toStartOf="@+id/guideline_left"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_subtitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/subtitle_initial_profit"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                        app:layout_constraintStart_toStartOf="@+id/guideline_left"
                        app:layout_constraintTop_toBottomOf="@+id/text_title" />

                    <Button
                        android:id="@+id/button_new_item"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:onClick="@{clickListener}"
                        android:text="@string/action_new_initial_profit"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                        app:layout_constraintStart_toStartOf="@+id/guideline_left"
                        app:layout_constraintTop_toBottomOf="@+id/text_subtitle" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_list_profit_dashboard" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>